--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <!-- main logo / n -->
+  <!-- main logo / nav -->
   <header class="header">
     <h1>Nana</h1>
     <nav>
@@ -25,7 +25,7 @@
     </nav>
   </header>
 
-  <!-- he banner -->
+  <!-- hero banner -->
   <section class="hero-banner">
     <div>
       <h2>Nana Mix</h2>
